--- a/mods/core/supplementaries/amendments.pw.toml
+++ b/mods/core/supplementaries/amendments.pw.toml
@@ -1,13 +1,13 @@
-name = "Amendments"
-filename = "amendments-1.20-1.0.14-fabric.jar"
+name = "amendments"
+filename = "amendments-1.20-1.0.16-fabric.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/9MrObtAA/amendments-1.20-1.0.16-fabric.jar"
 hash-format = "sha1"
-hash = "df277eb6999a2eb942a5b102b58200e6f54b7650"
-mode = "metadata:curseforge"
+hash = "cbbbbe45d86d93c8d3b5f533eccb599ba5a943e8"
 
 [update]
-[update.curseforge]
-file-id = 5131414
-project-id = 896746
+[update.modrinth]
+mod-id = "6iTJugQR"
+version = "9MrObtAA"
