--- a/index.toml
+++ b/index.toml
@@ -46,6 +46,18 @@ file = "config/paxi/resourcepacks/nsmp-connected-chains-resourcepack.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/applied-energistics/ae2-qol-recipes.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/applied-energistics/ae2.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/applied-energistics/applied-energistics-2-wireless-terminals.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/bountiful.pw.toml"
 metafile = true
 
@@ -55,6 +67,38 @@ metafile = true
 
 [[files]]
 file = "mods/content/building/connectible_chains.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/computer-craft/cc-tweaked.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/computer-craft/cccbridge.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/computer-craft/ducky-periphs.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/computer-craft/toms-peripherals.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/create/copycats.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/create/create-fabric-sodium-fix.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/create/create-steam-n-rails.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/create/create-track-map.pw.toml"
 metafile = true
 
 [[files]]
@@ -91,6 +135,42 @@ metafile = true
 
 [[files]]
 file = "mods/content/endrem.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/farmers-delight/chefs-delight.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/farmers-delight/farmers-delight-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/hex-casting/hex-casting.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/hex-casting/hexal.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/hex-casting/hexdim.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/hex-casting/hexvr.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/hex-casting/moreiotas.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/macaws/macaws-fences-and-walls.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/macaws/macaws-lights-and-lamps.pw.toml"
 metafile = true
 
 [[files]]
@@ -166,155 +246,19 @@ file = "mods/content/silly/mystical-oak-tree.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/core/applied-energistics/ae2-qol-recipes.pw.toml"
+file = "mods/content/supplementaries/amendments.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/core/applied-energistics/ae2.pw.toml"
+file = "mods/content/supplementaries/supplementaries-squared.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/core/applied-energistics/applied-energistics-2-wireless-terminals.pw.toml"
+file = "mods/content/supplementaries/supplementaries.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/core/bluemap/bluemap-offline-player-markers-(fabric).pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/bluemap/bluemap-sign-markers.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/bluemap/bluemap.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/computer-craft/cc-tweaked.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/computer-craft/cccbridge.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/computer-craft/ducky-periphs.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/computer-craft/toms-peripherals.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/create/copycats.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/create/create-fabric-sodium-fix.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/create/create-steam-n-rails.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/create/create-track-map.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/emi/ae2-emi-crafting.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/emi/emi-enchanting.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/emi/emi-loot.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/emi/emi-ores.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/emi/emi.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/emi/emiffect.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/emi/emitrades.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/emi/extra-mod-integrations.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/farmers-delight/chefs-delight.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/farmers-delight/farmers-delight-fabric.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/hex-casting/hex-casting.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/hex-casting/hexal.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/hex-casting/hexdim.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/hex-casting/hexvr.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/hex-casting/moreiotas.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/macaws/macaws-fences-and-walls.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/macaws/macaws-lights-and-lamps.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/supplementaries/amendments.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/supplementaries/supplementaries-squared.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/supplementaries/supplementaries.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/xaero/opac-fabric-create-support.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/xaero/open-parties-and-claims.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/xaero/xaeros-minimap.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/core/xaero/xaeros-world-map.pw.toml"
+file = "mods/content/tis3d.pw.toml"
 metafile = true
 
 [[files]]
@@ -750,10 +694,6 @@ file = "mods/testing/silent-screenshots.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/tis3d.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/tweaks/audio/ambientsounds.pw.toml"
 metafile = true
 
@@ -1154,7 +1094,51 @@ file = "mods/tweaks/vivecraft/vivecraft.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/utils/bluemap/bluemap-offline-player-markers-(fabric).pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/bluemap/bluemap-sign-markers.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/bluemap/bluemap.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/utils/chunky.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/emi/ae2-emi-crafting.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/emi/emi-enchanting.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/emi/emi-loot.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/emi/emi-ores.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/emi/emi.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/emi/emiffect.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/emi/emitrades.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/emi/extra-mod-integrations.pw.toml"
 metafile = true
 
 [[files]]
@@ -1175,6 +1159,22 @@ metafile = true
 
 [[files]]
 file = "mods/utils/stackdeobf.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/xaero/opac-fabric-create-support.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/xaero/open-parties-and-claims.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/xaero/xaeros-minimap.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/xaero/xaeros-world-map.pw.toml"
 metafile = true
 
 [[files]]
