--- a/index.toml
+++ b/index.toml
@@ -333,6 +333,10 @@ file = "mods/libraries/geckolib.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/gravity-api-fork.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/iceberg.pw.toml"
 metafile = true
 
@@ -685,10 +689,6 @@ file = "mods/testing/keepcommandhistory.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/testing/kleeslabs.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/testing/silent-screenshots.pw.toml"
 metafile = true
 
@@ -794,6 +794,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/gameplay/grass-seeds.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/gameplay/kleeslabs.pw.toml"
 metafile = true
 
 [[files]]
