--- a/mods/content/hex-casting/hexal.pw.toml
+++ b/mods/content/hex-casting/hexal.pw.toml
@@ -1,5 +1,6 @@
 name = "hexal"
 filename = "hexal-fabric-1.20.1-0.3.0-3.jar"
+side = "both"
 
 [download]
 url = "https://github.com/nekosmp/nsmp-artifacts/raw/main/hexal-fabric-1.20.1-0.3.0-3.jar"
