--- a/index.toml
+++ b/index.toml
@@ -644,11 +644,19 @@ file = "mods/testing/cpm/custom-player-models.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/testing/create/create-broken-bad-fabric.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/testing/create/create-diesel-generators-fabric.pw.toml"
 metafile = true
 
 [[files]]
 file = "mods/testing/create/create-enchantment-industry-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/create/create-extended-cogwheels-fabric.pw.toml"
 metafile = true
 
 [[files]]
@@ -689,6 +697,10 @@ metafile = true
 
 [[files]]
 file = "mods/testing/create/estrogen.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/create/garnished.pw.toml"
 metafile = true
 
 [[files]]
@@ -749,6 +761,10 @@ metafile = true
 
 [[files]]
 file = "mods/testing/haunted-harvest.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/testing/immersive-melodies.pw.toml"
 metafile = true
 
 [[files]]
