Updated all modrinth mods (cf ratelimit skill issue)

--- a/mods/content/decoration/labels.pw.toml
+++ b/mods/content/decoration/labels.pw.toml
@@ -1,13 +1,13 @@
 name = "Storage Labels"
-filename = "labels-1.20-1.20-fabric.jar"
+filename = "labels-1.20-1.20.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/x6r7yhfi/versions/ZtCVb2F3/labels-1.20-1.20-fabric.jar"
+url = "https://cdn.modrinth.com/data/x6r7yhfi/versions/9gfRK8Oc/labels-1.20-1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "e53c2f78fe85e4485d201af2bbf38ce10b9df4b7"
+hash = "be8bfb45c9054c1c050d630c0da9a1e4abf5aeff"
 
 [update]
 [update.modrinth]
 mod-id = "x6r7yhfi"
-version = "ZtCVb2F3"
+version = "9gfRK8Oc"
