--- a/mods/testing/cc/plethora-peripherals.pw.toml
+++ b/mods/testing/cc/plethora-peripherals.pw.toml
@@ -1,13 +1,13 @@
 name = "Plethora Peripherals"
-filename = "Plethora-Fabric-1.9.5.jar"
+filename = "Plethora-Fabric-1.10.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/LDfFdCXe/versions/PYoFhPiP/Plethora-Fabric-1.9.5.jar"
+url = "https://cdn.modrinth.com/data/LDfFdCXe/versions/RegJhcjp/Plethora-Fabric-1.10.0.jar"
 hash-format = "sha1"
-hash = "f7da09b46d925de0057447f3673bfa055439241d"
+hash = "390268648317e089e30f1a4b8c441d165e5e7338"
 
 [update]
 [update.modrinth]
 mod-id = "LDfFdCXe"
-version = "PYoFhPiP"
+version = "RegJhcjp"
