--- a/mods/tweaks/visual/better-falling-block-particles.pw.toml
+++ b/mods/tweaks/visual/better-falling-block-particles.pw.toml
@@ -1,13 +1,13 @@
 name = "Better Falling Block Particles"
-filename = "falling-block-particles-1.0.0.jar"
+filename = "falling-block-particles-1.0.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/S8CIQa7N/versions/FMx59sZB/falling-block-particles-1.0.0.jar"
+url = "https://cdn.modrinth.com/data/S8CIQa7N/versions/balOmlet/falling-block-particles-1.0.1.jar"
 hash-format = "sha1"
-hash = "11b91e11d7961b59e2052878bba94a95198bd7cc"
+hash = "2fb02088334b0f9626ff7e447d8849670ee6f54c"
 
 [update]
 [update.modrinth]
 mod-id = "S8CIQa7N"
-version = "FMx59sZB"
+version = "balOmlet"
