--- a/mods/content/supplementaries/amendments.pw.toml
+++ b/mods/content/supplementaries/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "amendments"
-filename = "amendments-1.20-1.0.16-fabric.jar"
+filename = "amendments-1.20-1.1.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/9MrObtAA/amendments-1.20-1.0.16-fabric.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/fBkzWy9q/amendments-1.20-1.1.1-fabric.jar"
 hash-format = "sha1"
-hash = "cbbbbe45d86d93c8d3b5f533eccb599ba5a943e8"
+hash = "36c0e976924a777fefe583c445c5ab9e05512139"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "9MrObtAA"
+version = "fBkzWy9q"
