--- a/mods/tweaks/interface/fancymenu.pw.toml
+++ b/mods/tweaks/interface/fancymenu.pw.toml
@@ -1,13 +1,13 @@
 name = "FancyMenu"
-filename = "fancymenu_fabric_3.1.0_MC_1.20.1.jar"
+filename = "fancymenu_fabric_3.1.1_MC_1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/U2GIUGvi/fancymenu_fabric_3.1.0_MC_1.20.1.jar"
+url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/kqtKxCTc/fancymenu_fabric_3.1.1_MC_1.20.1.jar"
 hash-format = "sha1"
-hash = "67008a3395b55df28b194e870e9d083a7ba4af68"
+hash = "1ddfc0504350a293e6b2a56d07899587a9ecfde1"
 
 [update]
 [update.modrinth]
 mod-id = "Wq5SjeWM"
-version = "U2GIUGvi"
+version = "kqtKxCTc"
